test/qnumericError6.slq
// args: --run

def foo(x:ℕ^0){} /// error
